Backporting 1225429: Fix kppp fails to build on Solaris 10. sethostname exists in libc, but is not defined in /usr/include/unistd.h Thanks tropikhajma for the patch.

BUG: 177220

svn path=/branches/KDE/4.6/kdenetwork/kppp/; revision=1225430